packages/react-server/examples/basic/src/routes/test/error/hydration/page.tsx
"use client";

export default function Page() {
  return <div>{import.meta.env.SSR ? "server" : "client"}</div>
}
